[project]
name = "rags-samples"
version = "0.1.0"
description = "Project to demonstrate RAGS capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken==0.12.0",
    "langchain-text-splitters==1.0.0",
    "pypdf==6.3.0",
    "PyMuPDF==1.26.6",
    "unstructured[local-inference]==0.18.20,
]